new cta on homepage

--- a/index.html
+++ b/index.html
@@ -138,6 +138,16 @@
             </div>
         </div>
     </div>
+    <div class="cta-banner2">
+        <div class="cta-banner-heading centered">
+            ***2025 UPDATE***
+        </div>
+        <div class="cta-content centered">
+            <div class="cta-text">
+                Bacon ipsum dolor amet bresaola rump shankle, pig turducken leberkas drumstick t-bone venison short loin beef ribs. Boudin turducken chuck venison short loin pig, flank tenderloin salami corned beef pork tongue prosciutto doner drumstick. Bresaola chuck sirloin pork chop capicola doner kevin beef chicken filet mignon salami cow picanha. Bresaola pork meatball pancetta. Flank short loin pork loin, shankle hamburger picanha turducken sirloin ribeye ground round landjaeger cupim buffalo leberkas prosciutto. Buffalo turducken meatball pork belly ribeye.
+            </div>
+        </div>
+    </div>
 
     <!-- text summary modal -->
     <dialog id="Modal1" class="modal">
