--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -118,6 +118,29 @@
           <h6 class="page-title">Gubernatorial Race</h6>
           <p>
             
+            The governor's race this year is highly anticipated and has lots of competitors. To be clear, we should not be any sort of authoritative source on this race.
+            Rather, we are going to consolidate and present the info as best as we can, but ultimately it will be up to you to sift through all the information.
+            <br>
+            <br>
+            Phil Murphy is not seeking re-election, and the democrats have 6 people in their primary race. While a lot could be said about the strengths and weaknesses 
+            of all the candidates, one easy way to get an idea of who they are is to watch their primary debate:
+            <div class="video-box-sm">
+                <iframe src="https://www.youtube.com/embed/Q0tkWTtau2w?si=XB-MxLnxE1-16Cdf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h3 class="video-heading-sm"></h3>
+                <div class="video-sm-desc">
+                    Democrat Gubernatorial Primary Debate
+                </div>
+            </div>
+            <br>
+            <br>
+            Similarly, the republicans have 5 candidates running in their primary. While Jack Ciatarelli and Bill Spadea seem to be the top 2 candidates, again, we 
+            aren't the experts, so be sure to check it out for yourself. And here is the republican primary debate:
+            <div class="video-box-sm">
+                <iframe src="https://www.youtube.com/embed/n7QL3-FcSkg?si=GndeFOcx3LHL1_oG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                <h3 class="video-heading-sm"></h3>
+                <div class="video-sm-desc">
+                    Republican Gubernatorial Primary Debate
+                </div>
+            </div>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
           </p>
