fulop quick summary

--- a/child_pages/cc-elections/Candidates/fulop.html
+++ b/child_pages/cc-elections/Candidates/fulop.html
@@ -115,6 +115,19 @@
               <h6 class="page-title">Steven Fulop</h6>
               <p>          
 
+                Steven Fulop is a three-term mayor of Jersey City and a Marine Corps veteran running for Governor of New Jersey with a platform grounded in bold, practical 
+                reform. Known for turning around Jersey City after the largest corruption scandal in the state's history, Fulop has built a reputation for transparency, 
+                innovation, and hands-on leadership. Under his administration, Jersey City became a statewide leader in housing production, environmental sustainability, 
+                public safety reform, and fiscal responsibility—all while expanding services and holding the line on taxes.
+                <br>
+                <br>
+                Fulop’s statewide platform reflects his executive experience: he's pushing for real solutions to affordability through tax reform, expanded housing access, 
+                shared services, and regional consolidation. His agenda includes comprehensive plans to modernize transportation, fix the broken school funding formula, 
+                protect the environment, expand healthcare access, and end entrenched political corruption—especially the influence of party bosses and the county line 
+                ballot system. Fulop is presenting himself as a candidate who doesn’t just talk about change—he’s already done it at the local level and is ready to scale 
+                that leadership statewide.
+                <br>
+                <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
               </p>
