resize gauge on desktop

--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -125,7 +125,7 @@
           they would have a vested interest in making their cases clear to the public, yet we have received no response from our efforts to make contact.
           <br>
           <br>
-          As the Democratic primary approaches, time is quickly slipping away for candidates to make their case to the public. Meanwhile, Republican candidates still have ample time before 
+          As the Democrat primary approaches, time is quickly slipping away for candidates to make their case to the public. Meanwhile, Republican candidates still have ample time before 
           the general election to engage with voters. But regardless of the timeline, the kind of basic information we’ve been seeking—positions on issues, general agendas, and 
           comparisons to their well known opponents—should already be available. After two years of repeated attempts to gather this information and foster cooperation, we’ve learned not to 
           expect a lot. Simply put: we’re not holding our breath for a sudden outbreak of transparency.
