capizola transparency message

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -134,6 +134,43 @@
               <h6 class="page-title">John P. Capizola</h6>
               <p>          
 
+                Former Commissioner Capizola has been around the political scene for several years and was appointed mid-year for his prior term as a county commissioner. With his brief time 
+                in office and prior campaigns, we can reasonably assume he’s familiar with the issues facing Cumberland County and the public expectations of a candidate running in 2025.
+                <br>
+                <br>
+                Which makes it all the more surprising that his public-facing materials don't reflect that experience. His official bio doesn't even mention his time as commissioner—an 
+                omission that raises questions about how seriously his campaign is treating voter outreach this cycle.
+                <br>
+                <br>
+                To his credit, Capizola is known for logging countless hours door-knocking and attending political events during previous campaigns. But at a time when voters are increasingly 
+                turning to digital platforms for information, and when free tools like Wix can host a campaign site in an afternoon, this traditional approach feels out of step. A 
+                well-organized candidate in 2025 should be able to share their positions widely and efficiently—not just face-to-face with those lucky enough to get a knock on their door, 
+                have spare time to attend events, or listen to phased out radio stations.
+                <br>
+                <br>
+                And that’s part of what makes this accessibility issue so glaring: Capizola lives within minutes of us. If, after two years of proactively reaching out to local 
+                candidates—including those in our own neighborhood—we still don’t have basic answers, what should the average voter expect?
+                <br>
+                <br>
+                At this stage in the game, candidates who know each other and have both served in public roles should be capable of articulating not just their own stance on key issues like 
+                the Nabb Ave Extension, but also how their platform compares to their opponent’s. Whether framed as a neutral comparison or a pointed critique, clarity is what matters—and 
+                right now, voters don’t have it.
+                <br>
+                <br>
+                That said, the rating is not permanent. Candidates with low transparency scores can improve them by clearly documenting their campaign messaging: filling out questionnaires, 
+                maintaining a basic campaign website, participating in podcast-style interviews, and sharing that information with us for public access. It’s not about giving us 
+                attention, candidates can create the content how they want— but the content should exist and be easily accessible to voters.
+                <br>
+                <br>
+                Ultimately, the root problem is often not a refusal to cooperate, but the absence of clear information in the first place. When representatives speculate that we're trying 
+                to "break a story," or accuse us of partisan motivations, they miss the point entirely. It’s 2025. The county should already be doing a better job helping residents 
+                understand their options for leadership. This platform simply serves as a proof-of-concept to fill the gap, though the county probably should do it themselves after getting 
+                the state legislature to change the laws to allow it.
+                <br>
+                <br>
+                For these reasons, Capizola receives a below-average rating for transparency and accessibility.
+                <br>
+                <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
               </p>
@@ -189,7 +226,7 @@
      </div>
 
     <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Inform The Vote Transparency Rating</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating</h4>
         <img class="gauge" src="../../../assets/gauge_kinda_bad.svg" alt="">
         <button id="rating-exp" class="rating-exp">rating explanation</button>
     </div> 
