--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -120,6 +120,23 @@
               <h6 class="page-title">John P. Capizola</h6>
               <p>          
 
+                John P. Capizola, Jr. is a former Cumberland County Commissioner, appointed in 2023 to serve a one-year term. He brings a background in education, with over two decades as a health 
+                and physical education teacher, a master’s in Educational Leadership, and certifications to serve as a principal and supervisor. He also has small business experience as a former 
+                restaurant and laundromat owner.
+                <br>
+                <br>
+                In past campaigns and public forums, Capizola has expressed support for educational excellence, fiscal responsibility, environmental sustainability, and community 
+                revitalization—emphasizing infrastructure, recreation, senior services, and broadband access. He has also voiced support for armed security in schools and opposition to 
+                school vouchers. At the 2023 Candidates Forum, he spoke about wanting to attract former residents back to the county by boosting business opportunities and praised the shift 
+                from partisanship to collaboration during his short time on the board.
+                <br>
+                <br>
+                However, <strong>his current campaign messaging remains unclear.</strong> Aside from a basic biographical profile, <strong>no updated policy stances, platform materials, or 
+                detailed comparisons to his opponent have been shared.</strong> While past statements offer a rough sketch of his views, they should not be assumed to reflect his current 
+                priorities.
+                <br>
+                <br>
+                Capizola has been contacted multiple times with opportunities to share updated information but has yet to provide a substantive response. Voters seeking detailed and current insights into his positions may find it difficult to evaluate his candidacy without greater transparency.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
               </p>
@@ -130,7 +147,7 @@
             <!-- Modal content -->
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close">
-              <h4 class="quick-sum">quick summary</h4>
+              <h4 class="quick-sum">Rating Explanation</h4>
               <h6 class="page-title">John P. Capizola</h6>
               <p>          
 
@@ -143,7 +160,7 @@
                 <br>
                 <br>
                 To his credit, Capizola is known for logging countless hours door-knocking and attending political events during previous campaigns. But at a time when voters are increasingly 
-                turning to digital platforms for information, and when free tools like Wix can host a campaign site in an afternoon, this traditional approach feels out of step. A 
+                turning to digital platforms for information, and when tools like Wix can host a campaign site in an afternoon, this traditional approach feels out of step. A 
                 well-organized candidate in 2025 should be able to share their positions widely and efficiently—not just face-to-face with those lucky enough to get a knock on their door, 
                 have spare time to attend events, or listen to phased out radio stations.
                 <br>
@@ -233,6 +250,15 @@
             
      <div class="candidate-agenda">
 
+        <h4 class="sub-heading">Agenda</h4>
+            <div class="experience can-sec">
+                As of April 16th, the only info available regarding Capizola's current primary campaign is on the 
+                <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">CumberlandNJDems Party Site</button></a>                 
+
+            </div>
+
+        <details>
+            <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Info Collected From PRIOR Elections</summary>
             <h4 class="sub-heading">Agenda</h4>
             <div class="experience can-sec">
 
@@ -309,7 +335,7 @@
                     <br>
                     At one point during the forum, Capizola made it clear that he is against school vouchers.
                 </div>
-   
+        </details>
     </div>
 </div>   
 </body>
