larae smith page filled

--- a/child_pages/cc-elections/Candidates/balicki.html
+++ b/child_pages/cc-elections/Candidates/balicki.html
@@ -237,7 +237,7 @@
      </div>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Very Low</h4>
         <img class="gauge" src="../../../assets/gauge_real_bad.svg" alt="">
         <button id="rating-exp" class="rating-exp">rating explanation</button>
     </div> 
