--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -243,7 +243,7 @@
      </div>
 
     <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Below Average</h4>
         <img class="gauge" src="../../../assets/gauge_kinda_bad.svg" alt="">
         <button id="rating-exp" class="rating-exp">rating explanation</button>
     </div> 
@@ -256,6 +256,9 @@
                 <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">CumberlandNJDems Party Site</button></a>                 
 
             </div>
+
+            <br>
+            <br>
 
         <details>
             <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Info Collected From PRIOR Elections</summary>
