debug fix attempt smith page

--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -10,7 +10,7 @@
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
         <meta property="og:title" content="Inform The Vote NJ - Larae Smith">
-        <meta property="og:description" content="Election information about Larae Smith>
+        <meta property="og:description" content="Election information about Larae Smith">
         <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
         <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/smith">
     </head>
