quick summary button updates, some transparency rating stuff

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -19,6 +19,7 @@
         1) Change script tag on line 10
         2) Replace existing modal with 2 modals on line 114
         3) Add in gauge at line 245
+        4) Copy/paste quick summary button, from line 226
         -->
         <div class="menu-wrap">
             <input type="checkbox" autocomplete='off' class="toggler">
