--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -200,6 +200,7 @@
      <div class="candidate-pic-box">
          <img class="cover" src="../../../assets/candidates/smith.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
+
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
 
@@ -209,7 +210,7 @@
                 
             </div>
 
-             <button class="quick-summary-reopen">quick summary</button>
+             <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
 
              <div class="election-date">
                  <p>This election is on June 10th, 2025</p>
