lods page update

--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -368,23 +368,22 @@
               <h6 class="page-title">Victoria Lods</h6>
               <p>          
 
-                John P. Capizola, Jr. is a former Cumberland County Commissioner, appointed in 2023 to serve a one-year term. He brings a background in education, with over two decades as a health 
-                and physical education teacher, a master’s in Educational Leadership, and certifications to serve as a principal and supervisor. He also has small business experience as a former 
-                restaurant and laundromat owner.
+                Victoria Groetsch-Lods is a first-term Cumberland County Commissioner with a wide-ranging background in communications, education, agriculture, and government. She’s worked 
+                as a high school educator, former chief of staff in the State Senate, and the first executive director of Cumberland County Habitat for Humanity. She also comes from a 
+                multi-generational farming family and has been active in local boards and public service throughout her career.
                 <br>
                 <br>
-                In past campaigns and public forums, Capizola has expressed support for educational excellence, fiscal responsibility, environmental sustainability, and community 
-                revitalization—emphasizing infrastructure, recreation, senior services, and broadband access. He has also voiced support for armed security in schools and opposition to 
-                school vouchers. At the 2023 Candidates Forum, he spoke about wanting to attract former residents back to the county by boosting business opportunities and praised the shift 
-                from partisanship to collaboration during his short time on the board.
+                Since taking office, she has focused on issues like education, agriculture, mental health, and addiction services.
                 <br>
                 <br>
-                However, <strong>his current campaign messaging remains unclear.</strong> Aside from a basic biographical profile, <strong>no updated policy stances, platform materials, or 
-                detailed comparisons to his opponent have been shared.</strong> While past statements offer a rough sketch of his views, they should not be assumed to reflect his current 
-                priorities.
+                Lods is visible in the community and regularly attends local Republican events where she is approachable and willing to engage. However, her campaign lacks a 
+                centralized platform or clear public documentation of her current stances, making it difficult for voters to get a comprehensive view of her priorities without attending 
+                in-person events.
                 <br>
                 <br>
-                Capizola has been contacted multiple times with opportunities to share updated information but has yet to provide a substantive response. Voters seeking detailed and current insights into his positions may find it difficult to evaluate his candidacy without greater transparency.
+                Given her communications background, there’s an opportunity for her to help set a new standard for public-facing engagement—but that shift has yet to fully take shape.
+                <br>
+                <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
               </p>
@@ -399,41 +398,40 @@
               <h6 class="page-title">Victoria Lods</h6>
               <p>          
 
-                Former Commissioner Capizola has been around the political scene for several years and was appointed mid-year for his prior term as a county commissioner. With his brief time 
-                in office and prior campaigns, we can reasonably assume he’s familiar with the issues facing Cumberland County and the public expectations of a candidate running in 2025.
+                Victoria Lods is currently serving her first term on the Cumberland County Board of Commissioners. With a professional background that spans communications, education, state 
+                government, and agriculture, she brings a diverse and practical skill set to the board. Her previous roles include serving as chief of staff to a state senator, executive 
+                director of Cumberland County Habitat for Humanity, and a teacher at both Bridgeton and Millville High Schools. She’s also a fifth-generation resident of her family’s 
+                South Jersey farm, deeply rooted in the community she serves.
                 <br>
                 <br>
-                Which makes it all the more surprising that his public-facing materials don't reflect that experience. His official bio doesn't even mention his time as commissioner—an 
-                omission that raises questions about how seriously his campaign is treating voter outreach this cycle.
+                Lods has maintained a visible presence during her time in office, regularly attending Republican bi-weekly breakfast events and staying engaged with local constituents. 
+                When approached, she is friendly, articulate, and more than willing to converse—traits that make her approachable in person.
                 <br>
                 <br>
-                To his credit, Capizola is known for logging countless hours door-knocking and attending political events during previous campaigns. But at a time when voters are increasingly 
-                turning to digital platforms for information, and when tools like Wix can host a campaign site in an afternoon, this traditional approach feels out of step. A 
-                well-organized candidate in 2025 should be able to share their positions widely and efficiently—not just face-to-face with those lucky enough to get a knock on their door, 
-                have spare time to attend events, or listen to phased out radio stations.
+                However, like most local candidates in this cycle, her public campaign infrastructure hasn’t caught up with what voters now expect in 2025. There’s currently no campaign 
+                website specifically for her, no comprehensive platform summary, and no participation in centralized efforts to provide side-by-side comparisons or deeper policy discussions.
                 <br>
                 <br>
-                And that’s part of what makes this accessibility issue so glaring: Capizola lives within minutes of us. If, after two years of proactively reaching out to local 
-                candidates—including those in our own neighborhood—we still don’t have basic answers, what should the average voter expect?
+                And that’s the real disconnect—not just with Lods, but across the board: while face-to-face conversations and live events are valuable, they no longer satisfy the modern 
+                expectation of accessible, on-demand information. In a digital era where voters ought to be able track infrastructure projects like the Middle Mile Broadband initiative 
+                somewhat regularly, they’re also looking for candidates who proactively address those same issues with clear, documented perspectives... without necessarily reviewing 
+                every county, city, school board, and state meeting.
                 <br>
                 <br>
-                At this stage in the game, candidates who know each other and have both served in public roles should be capable of articulating not just their own stance on key issues like 
-                the Nabb Ave Extension, but also how their platform compares to their opponent’s. Whether framed as a neutral comparison or a pointed critique, clarity is what matters—and 
-                right now, voters don’t have it.
+                This becomes even more noticeable in Lods’ case, given her academic background in Communications and Journalism—fields built around the importance of message clarity and 
+                audience reach. One might expect someone with that training to do more to help bridge the gap between traditional campaigning and 21st-century civic transparency. Yet, we 
+                still lack a centralized reference point for her current priorities, stances, or comparisons to her opponents.
                 <br>
                 <br>
-                That said, the rating is not permanent. Candidates with low transparency scores can improve them by clearly documenting their campaign messaging: filling out questionnaires, 
-                maintaining a basic campaign website, participating in podcast-style interviews, and sharing that information with us for public access. It’s not about giving us 
-                attention, candidates can create the content how they want— but the content should exist and be easily accessible to voters.
+                To be fair, she is far more present than candidates who remain completely out of view—but without more centrally accessible, digital campaign messaging, even an engaged 
+                candidate can feel distant to the average voter.
                 <br>
                 <br>
-                Ultimately, the root problem is often not a refusal to cooperate, but the absence of clear information in the first place. When representatives speculate that we're trying 
-                to "break a story," or accuse us of partisan motivations, they miss the point entirely. It’s 2025. The county should already be doing a better job helping residents 
-                understand their options for leadership. This platform simply serves as a proof-of-concept to fill the gap, though the county probably should do it themselves after getting 
-                the state legislature to change the laws to allow it.
+                That said, the opportunity to improve remains fully open. A completed questionnaire, a podcast interview, and a detailed list of policy positions on key county issues 
+                would go a long way toward increasing her transparency score.
                 <br>
                 <br>
-                For these reasons, Capizola receives a below-average rating for transparency and accessibility.
+                For these reasons, Victoria Groetsch-Lods currently receives an almost above average rating for transparency and accessibility.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
