style added to transparency standards

--- a/child_pages/cc-elections/transparency_standards_page.html
+++ b/child_pages/cc-elections/transparency_standards_page.html
@@ -8,6 +8,48 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <style>
+        .transparency-criteria {
+          max-width: 800px;
+          margin: 2rem auto;
+          padding: 2rem;
+          background: #f9f9f9;
+          border-radius: 12px;
+          box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
+          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+          line-height: 1.6;
+          color: #333;
+        }
+        .transparency-criteria h2 {
+          text-align: center;
+          color: #004080;
+          margin-bottom: 1.5rem;
+        }
+        .transparency-criteria h3 {
+          color: #004080;
+          margin-top: 1.5rem;
+        }
+        .transparency-criteria ul {
+          padding-left: 1.2rem;
+        }
+        .transparency-criteria li {
+          margin: 0.4rem 0;
+        }
+        .transparency-criteria hr {
+          border: none;
+          border-top: 1px solid #ccc;
+          margin: 2rem 0;
+        }
+        .transparency-criteria a {
+          color: #004080;
+          text-decoration: none;
+        }
+        .transparency-criteria a:hover {
+          text-decoration: underline;
+        }
+      </style>
+      
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
 <script src="../../app.js" async></script>
@@ -105,6 +147,10 @@
     </div>
 
     <div class="transparency-criteria">
+        <br>
+        <br>
+        <br>
+        <br>
         <h2>Candidate Transparency & Accessibility: Evaluation Criteria</h2>
         <p>This page outlines the objective standards used to evaluate candidates' transparency and accessibility for public office in Cumberland County. These criteria are designed to reflect modern expectations of campaign communication and public accountability.</p>
       
