county commissioners gauge stuff updated

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -245,8 +245,10 @@
 
     <div class="gauge-box">
         <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Below Average</h4>
-        <img class="gauge" src="../../../assets/gauge_kinda_bad.svg" alt="">
-        <button id="rating-exp" class="rating-exp">rating explanation</button>
+        <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
+
+        <img class="gauge" src="../../../assets/gauge_real_bad.svg" alt="">
+        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
             
      <div class="candidate-agenda">
