--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -232,8 +232,10 @@
 
      <div class="gauge-box">
         <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Very Low</h4>
+        <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
+
         <img class="gauge" src="../../../assets/gauge_real_bad.svg" alt="">
-        <button id="rating-exp" class="rating-exp">rating explanation</button>
+        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
             
      <div class="candidate-agenda">
