spiotto, rothman, and jordan pages

--- a/child_pages/cc-elections/Candidates/welch.html
+++ b/child_pages/cc-elections/Candidates/welch.html
@@ -112,7 +112,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close1" class="close">
               <h4 class="quick-sum">quick summary</h4>
-              <h6 class="page-title">Warren Vizzard</h6>
+              <h6 class="page-title">Robert Welch</h6>
               <p>          
 
                 Robert Welch is running for the Commercial Township Committee and has received the endorsement of the Cumberland County Regular Republican Organization. However, there 
@@ -134,7 +134,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close">
               <h4 class="quick-sum">Rating Explanation</h4>
-              <h6 class="page-title">Warren Vizzard</h6>
+              <h6 class="page-title">Robert Welch</h6>
               <p>          
 
                 Robert Welch is currently a candidate for the Commercial Township Committee and has received the official endorsement of the Cumberland County Regular Republican 
@@ -220,7 +220,7 @@
         <img class="gauge" src="../../../assets/gauge_real_bad.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
-    
+
      <details>
         <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Events</summary>
 
