--- a/child_pages/cc-elections/downe_township_committee.html
+++ b/child_pages/cc-elections/downe_township_committee.html
@@ -114,7 +114,7 @@
         <div class="modal-content">
           <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
           <h4 class="quick-sum">quick summary</h4>
-          <h6 class="page-title">Lawrence Township Committee</h6>
+          <h6 class="page-title">Downe Township Committee</h6>
           <p>
             
             The Downe Township committee has two seats open this year. Two candidates, Michael Rothman and Larry Jordan, have received endorsements from the Cumberland County
