--- a/child_pages/cc-elections/Candidates/pignatelli.html
+++ b/child_pages/cc-elections/Candidates/pignatelli.html
@@ -112,7 +112,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close1" class="close">
               <h4 class="quick-sum">quick summary</h4>
-              <h6 class="page-title">Warren Vizzard</h6>
+              <h6 class="page-title">Sean Pignatelli</h6>
               <p>          
 
                 Sean Pignatelli is a hands-on community advocate and longtime resident of Downe Township, currently serving on both the local School Board and the Recreation & Tourism Committee. 
@@ -139,7 +139,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close">
               <h4 class="quick-sum">Rating Explanation</h4>
-              <h6 class="page-title">Warren Vizzard</h6>
+              <h6 class="page-title">Sean Pignatelli</h6>
               <p>          
 
                 Sean Pignatelli is a candidate for Downe Township Committee who has demonstrated one of the strongest commitments to transparency and public engagement of any local 
@@ -220,10 +220,10 @@
      </div>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Very Low</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
-        <img class="gauge" src="../../../assets/gauge_real_bad.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
 
