--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
                 Our approach this year will be a bit different, a little more direct and a little less benefit of the doubt. 
                 <details>
                     <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
-                    When we first started doing this, it was understandable to not communicate with the new kids on the block. Leadership is busy, that's understandable. 
+                    When we first started doing this, it was understandable for many candidates to not communicate with the new kids on the block. Leadership is busy, that's understandable. 
                     During our second year, we made some progress with figuring out community networking and how local politics work. Now that we're in our third year, some 
                     things are clear: The local politicians know who we are and what we're trying to accomplish. Everyone has been contacted through various means. If we 
-                    don't have the info, it's because people either aren't cooperating, or there is no info to convey. So we're making the language a little more strict to 
-                    reflect that, and we've added a transparency meter to our candidate pages to give readers a rough idea of who is on top of letting voters know what's up, 
-                    and who isn't. Also, be sure to go into candidate's quick summaries on their candidate pages for our impressions.
+                    don't have the info, it's because people either aren't cooperating, or there is no info to convey. So we're making the language a little more clear to 
+                    reflect that, and we've added a transparency meter to our candidate pages to give readers a rough idea of who is on top of letting voters know what's up to a 
+                    reasonably sufficient standard, and who isn't. Also, be sure to go into candidate's quick summaries on their candidate pages for our impressions.
             </div>
         </div>
     </div>
