--- a/child_pages/cc-elections/downe_township_committee.html
+++ b/child_pages/cc-elections/downe_township_committee.html
@@ -125,7 +125,7 @@
             <br>
             Sean Pignatelli is the only candidate in the Downe Township race with a clearly known, accessible platform and a known proven record of hands-on service — from 
             defending the local school to revitalizing public spaces and pushing for real transparency. While others appear to stay quiet, Sean shows up, speaks up, and 
-            lays out real plans. As far as I’m concerned, he’s the only viable choice — because he’s the only one who’s actually told us what he stands for.
+            lays out real plans. As far as I’m concerned, he’s the only viable choice — because he’s the only one who’s actually told us what he stands for. You can review our 
             <br>
             <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -179,6 +179,8 @@
         </div>
 
         <button class="quick-summary-reopen">quick election summary</button>
+
+        <a href="../cc-elections/downe_township_transparency_chart.html">Candidate Transparency Chart</a>
                 
                 
                     <div class="sb-top-box"> 
