--- a/child_pages/cc-elections/downe_township_committee.html
+++ b/child_pages/cc-elections/downe_township_committee.html
@@ -182,9 +182,10 @@
 
         <br>
 
-        <a href="../cc-elections/downe_township_transparency_chart.html
-                style=display: block; text-align: center; font-size: 1.5rem; margin: 2rem 0; font-weight: bold; color: #004080; text-decoration: none;">
-        </a>Candidate Transparency Chart</a>
+        <a href="../cc-elections/downe_township_transparency_chart.html"
+                style="display: block; text-align: center; font-size: 1.5rem; margin: 2rem 0; font-weight: bold; color: #004080; text-decoration: none;">
+                Candidate Transparency Chart
+        </a>
         
                 <br>
                 
