--- a/child_pages/cc-elections/downe_township_transparency_chart.html
+++ b/child_pages/cc-elections/downe_township_transparency_chart.html
@@ -179,6 +179,11 @@
         <h2>Quick Transparency Breakdown</h2>
         <div class="summary-note">
           Based on available information, Sean Pignatelli is the only candidate providing a clear, accessible campaign.
+          <br>
+          <br>
+          A brief review of our methods: We send snail mail and emails to the candidates via addresses they provided to the county clerk. We regularly attend political meetings and 
+          campaign events.We do google searches of all candidates. We have suggested more cooperation from the county at county commissioner meetings multiple times. We have 
+          written to all state legislators about changing state election law to have counties do this type of service themselves. 
         </div>
       
         <div class="candidate-card">
@@ -208,7 +213,7 @@
           <span class="label">Voter Info Participation:</span><span class="value">❌ None</span>
           <span class="label">Public Appearances:</span><span class="value">❌ Not observed</span>
           <span class="label">Local Issue Messaging:</span><span class="value">❌ Not available</span>
-          <div class="rating">Rating: <strong>Below Average</strong></div>
+          <div class="rating">Rating: <strong>Low</strong></div>
         </div>
       
         <div class="candidate-card">
@@ -218,7 +223,7 @@
           <span class="label">Voter Info Participation:</span><span class="value">❌ None</span>
           <span class="label">Public Appearances:</span><span class="value">❌ Not observed</span>
           <span class="label">Local Issue Messaging:</span><span class="value">❌ Not available</span>
-          <div class="rating">Rating: <strong>Below Average</strong></div>
+          <div class="rating">Rating: <strong>Low</strong></div>
         </div>
       </div>
 
