county commissioner transparency chart test

--- a/child_pages/cc-elections/downe_township_committee.html
+++ b/child_pages/cc-elections/downe_township_committee.html
@@ -184,7 +184,7 @@
 
         <a href="../cc-elections/downe_township_transparency_chart.html"
                 style="display: block; text-align: center; font-size: 1.5rem; margin: 2rem 0; font-weight: bold; color: #004080; text-decoration: none;">
-                Candidate Transparency Chart
+                Candidate Transparency/Accessibility Chart
         </a>
         
                 <br>
