link fix attempt 2

--- a/child_pages/cc-elections/county_commissioners_transparency_chart.html
+++ b/child_pages/cc-elections/county_commissioners_transparency_chart.html
@@ -178,7 +178,8 @@
     <div class="comparison-wrapper">
         <h2>Quick Transparency Breakdown</h2>
         <div class="summary-note">
-          Only Albrecht and Lods show consistent public engagement, but none of the candidates currently offer a full public platform. Capizola, Balicki, and Smith remain largely off the radar.
+          Only Albrecht and Lods show consistent public engagement, but none of the candidates currently offer a full public platform. Capizola, Balicki, and Smith remain largely 
+          off the radar.
         </div>
       
         <div class="candidate-card">
