commercial township transparency chart

--- a/child_pages/cc-elections/county_commissioners_transparency_chart.html
+++ b/child_pages/cc-elections/county_commissioners_transparency_chart.html
@@ -180,6 +180,11 @@
         <div class="summary-note">
           Only Albrecht and Lods show consistent public engagement, but none of the candidates currently offer a full public platform. Capizola, Balicki, and Smith remain largely 
           off the radar.
+          <br>
+          <br>
+          A brief review of our methods: We send snail mail and emails to the candidates via addresses they provided to the county clerk. We regularly attend political meetings and 
+          campaign events. We do google searches of all candidates. We have suggested more cooperation from the county at county commissioner meetings multiple times. We have 
+          written to all state legislators about changing state election law to have counties do this type of service themselves. 
         </div>
       
         <div class="candidate-card">
